--- a/AoC2024.csproj
+++ b/AoC2024.csproj
@@ -12,6 +12,7 @@
     <Content Include="*.sample.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Using Static="True" Include="ProgramHelper" />
   </ItemGroup>
 
 
