--- a/AoC2024.csproj
+++ b/AoC2024.csproj
@@ -20,6 +20,7 @@
     <!--<Using Include="System.Console" Static="True" />-->
     <Using Include="Spectre.Console" />
     <Using Include="Spectre.Console.AnsiConsole" Static="True" />
+    <Using Include="Helper" Static="True" />
     <Using Include="System.Console" Alias="SysConsole" />
   </ItemGroup>
 
