--- a/AoC.Benchs/AoC.Benchs.csproj
+++ b/AoC.Benchs/AoC.Benchs.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <Using Include="AoC"/>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
   </ItemGroup>  
   
