--- a/AoC.Common/AoC.Common.csproj
+++ b/AoC.Common/AoC.Common.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace></RootNamespace>
-    <OutputType>Exe</OutputType>
+    <RootNamespace>AoC</RootNamespace>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -13,26 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Using Include="AoC" />
     <Using Include="AoC.Helper" Static="True" />
     <Using Include="Spectre.Console" />
     <Using Include="Spectre.Console.AnsiConsole" Static="True" />
     <Using Include="System.Console" Alias="SysConsole" />
     <Using Include="System.Text.RegularExpressions" />
-
-    <InternalsVisibleTo Include="AoC.Tests" />
+    <InternalsVisibleTo Include="AoC.Tests"/>
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\AoC.Common\AoC.Common.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="**\*.sample.txt">
-      <DependentUpon>$([System.String]::Copy('%(FileName)').Split('.')[0]).cs</DependentUpon>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
 
 </Project>
