--- a/AoC.Tests/AoC.Tests.csproj
+++ b/AoC.Tests/AoC.Tests.csproj
@@ -14,8 +14,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="xunit.v3" Version="0.3.0-pre.18" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.30" />
+    <PackageReference Include="xunit.v3" Version="0.7.0-pre.15" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.0-pre.49">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
