--- a/AoC/Properties/launchSettings.json
+++ b/AoC/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AoC": {
       "commandName": "Project",
-      "commandLineArgs": "12"
+      "commandLineArgs": ""
     }
   }
 }
