passage algo DBscan

--- a/AoC.2024/AoC.2024.csproj
+++ b/AoC.2024/AoC.2024.csproj
@@ -15,6 +15,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dbscan" Version="3.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AoC.Common\AoC.Common.csproj" />
   </ItemGroup>
 
